--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,4 +1,14 @@
-/a80_Entities/
+/a64_Application/
+/a64_Entities/
+/a70_Application/
+/a70_Entities/
+/a70_Util/
 /a80_Application/
+/a80_Entities/
 /a81_Application/
 /a81_Entities/
+/aulas/
+/exerciciosA27/
+/exerciciosA34/
+/exerciciosA48/
+/exerciciosA50/
